<resources>
    <string name="app_name">News feed</string>
    <string name="large_text" >
        "Ученые взяли зевающих людей и животных под особый контроль"
    </string>
    <string name="new1">
        В Париже в конце июня в одном из крупнейших госпиталей столицы -
        "Сальпетриер" прошел Первый международный конгресс, посвященный изучению этого явления.
        Он собрал крупнейших специалистов по данному вопросу из Канады, Индии, Франции, Бельгии, Италии,
        Израиля и ряда других стран.
    </string>
    <string name="new2Z">
        Самая курьезная семейная ссора: полицейским пришлось разнимать попугая с хозяином
    </string>
    <string name="new2">
        На вызов по поводу семейной разборки прибыли немецкие стражи порядка. На громкие крики, топот и грохот падающей мебели в квартире этажом выше пожаловались соседи. Но когда полицейский наряд прибыл на место, то полиция была озадачена.
Дверь полиции открыл мужчина со следами крови на лице, подчеркивает ТАСС. Он повздорил со своим попугаем. Птица, беспорядочно летая по квартире, опрокидывала вещи и побила посуду.
    </string>
    <string name="new3Z">
        Внезапный случай в общажитии!!!
    </string>
    <string name="new3">
        Как сообщают очевидцы, некий мальчик Санёк любил прибираться в своей комноте общажития по 5 часов.
        Однажды когда он начал в очередной раз прибераться, он в первую очередь выгнал из комноты своего соседа - Колясика.
        Но после 5 часового трения тряпкой тумбочки, он вышел в коридор, да бы сообщить о своей победе над пылью, но обноружил
        бездыханное тело своего боевого товарища по борьбе с клопами ((. Как позже выяснилось, Колясик не догадался закрыть форточку
        в коридоре общажития, и замез насмерть.

    </string>
    <string name="action_settings">Settings</string>
</resources>